--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
         <br /><a href='https://www.versioneye.com/user/projects/5786289c6edb08003d1086f4'><img src='https://www.versioneye.com/user/projects/5786289c6edb08003d1086f4/badge.svg?style=flat-square' alt="Dependency Status" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:attogram-framework/references'><img src='https://www.versioneye.com/php/attogram:attogram-framework/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
   </div>
 
@@ -90,6 +91,8 @@
         <a href="https://www.codacy.com/app/attogram-project/ote?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/ote&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a078450b69e84d9e8a85232f22b5c5ef" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:open-translation-engine/references'><img src='https://www.versioneye.com/php/attogram:open-translation-engine/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
+
     </div>
   </div>
 
@@ -111,6 +114,7 @@
         <br /><a href="https://github.com/attogram/DAMS"><img src="https://poser.pugx.org/attogram/dams/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
+        <a href='https://www.versioneye.com/php/attogram:dams/references'><img src='https://www.versioneye.com/php/attogram:dams/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
   </div>
 
@@ -138,6 +142,7 @@
         <a href="https://www.codacy.com/app/attogram-project/8queens?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/8queens&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/b471a1179412483e8c42eaaefe44c00d" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:8queens/references'><img src='https://www.versioneye.com/php/attogram:8queens/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
   </div>
 
@@ -164,6 +169,7 @@
           <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668" alt="Grade" /></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/issue_count.svg" alt="Issue Count" /></a>
+          <br /><a href='https://www.versioneye.com/php/attogram:attogram-base/references'><img src='https://www.versioneye.com/php/attogram:attogram-base/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
       </div>
   </div>
 
@@ -190,6 +196,7 @@
         <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:attogram-database/references'><img src='https://www.versioneye.com/php/attogram:attogram-database/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
   </div>
 
@@ -216,6 +223,7 @@
         <a href="https://www.codacy.com/app/attogram-project/attogram-user?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-user&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8b2c48929d514a60b355a84f136c57c2" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:attogram-user/references'><img src='https://www.versioneye.com/php/attogram:attogram-user/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
   </div>
 
@@ -241,6 +249,8 @@
     <div class="col-sm-3">
         <a href="https://www.codacy.com/app/attogram-project/attogram-contactform?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-contactform&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/ccc7d8a823254176bed3976cfa3bb2a6" alt="Badge" /></a>        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:attogram-contactform/references'><img src='https://www.versioneye.com/php/attogram:attogram-contactform/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
+
     </div>
   </div>
 
