--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 <div class="container-fluid">
 
   <div class="row rowh bg-primary">
-    <div class="col-sm-6">
+    <div class="col-sm-6 text-center">
         <h1><a href="https://github.com/attogram/" class="headb">The Attogram Project</a></h1>
+        <p><em>Open Source + Open Content</em></p>
+        <p><a href="https://github.com/attogram/"><img src="https://avatars0.githubusercontent.com/u/8653063" alt="logo" width="100" height="100" /></a></p>
     </div>
     <div class="col-sm-3 small">
       <a href="#attogram" class="headb">Attogram Framework</a>
-      <br /><a href="#attogram-base" class="headb">Attogram Base Module</a>
-      <br /><a href="#attogram-database" class="headb">Attogram Database Module</a>
-      <br /><a href="#attogram-user" class="headb">Attogram User Module</a>
-      <br /><a href="#attogram-contactform" class="headb">Attogram Contact Form Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-database" class="headb">Database Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-user" class="headb">User Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-base" class="headb">Base Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-contactform" class="headb">Contact Form Module</a>
+      <br /><br /><a href="#ote" class="headb">Open Translation Engine</a>
+      <br /><br /><a href="#8queens" class="headb">8 Queens puzzle</a>
     </div>
     <div class="col-sm-3 small">
-      <a href="#ote" class="headb">Open Translation Engine</a>
-      <br /><a href="#dams" class="headb">Dictionary Additions Management System</a>
-      <br /><a href="#8queens" class="headb">8 Queens puzzle</a>
-      <br /><a href="#wiib" class="headb">WiiB</a>
-      <br /><a href="#yamwat" class="headb">Yamwat</a>
-      <br /><a href="#domdoodler" class="headb">domdoodler</a>
-      <br /><a href="#attogram.github.io" class="headb">attogram.github.io</a>
+      <a href="#dams" class="headb">Dictionary Additions Management System</a>
+      <br /><br /><a href="#wiib" class="headb">Which image is better?</a>
+      <br /><br /><a href="#yamwat" class="headb">Yamwat</a>
+      <br /><br /><a href="#domdoodler" class="headb">domdoodler</a>
+      <br /><br /><a href="#attogram.github.io" class="headb">attogram.github.io</a>
     </div>
   </div>
 
