attogram-info update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#attogram" class="headb">Attogram Framework</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-database" class="headb">Database Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-user" class="headb">User Module</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-base" class="headb">Base Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-info" class="headb">Info Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-contactform" class="headb">Contact Form Module</a>
       <br /><br /><a href="#ote" class="headb">Open Translation Engine</a>
       <br /><br /><a href="#8queens" class="headb">8 Queens puzzle</a>
@@ -148,33 +148,6 @@
     </div>
   </div>
 
-  <a name="attogram-base"></a>
-  <div class="row rowb highlight">
-      <div class="col-sm-5">
-        <h2 class="squished"><a href="https://github.com/attogram/attogram-base">Attogram Base Module</a></h2>
-        Base module for the Attogram Framework.
-      </div>
-      <div class="col-sm-2">
-          <a href="https://github.com/attogram/attogram-base/blob/master/README.md">README</a>
-          <br /><a href="https://github.com/attogram/attogram-base/blob/master/CHANGELOG.md">CHANGELOG</a>
-          <br /><a href="https://github.com/attogram/attogram-base/blob/master/TODO.md">TODO</a>
-          <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md">LICENSE</a>
-      </div>
-      <div class="col-sm-2">
-          <a href="https://travis-ci.org/attogram/attogram-base"><img src="https://travis-ci.org/attogram/attogram-base.svg?branch=master" alt="Build" /></a>
-          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/v/stable" alt="Latest Stable Version" /></a>
-          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/downloads" alt="Total Downloads" /></a>
-          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/v/unstable" alt="Latest Unstable Version" /></a>
-          <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-base/license" alt="License" /></a>
-      </div>
-      <div class="col-sm-3">
-          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668" alt="Grade" /></a>
-          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
-          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/issue_count.svg" alt="Issue Count" /></a>
-          <br /><a href='https://www.versioneye.com/php/attogram:attogram-base/references'><img src='https://www.versioneye.com/php/attogram:attogram-base/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
-      </div>
-  </div>
-
   <a name="attogram-database"></a>
   <div class="row rowb highlight">
     <div class="col-sm-5">
@@ -227,6 +200,32 @@
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
         <br /><a href='https://www.versioneye.com/php/attogram:attogram-user/references'><img src='https://www.versioneye.com/php/attogram:attogram-user/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
     </div>
+  </div>
+
+  <a name="attogram-info"></a>
+  <div class="row rowb highlight">
+      <div class="col-sm-5">
+        <h2 class="squished"><a href="https://github.com/attogram/attogram-info">Attogram Info Module</a></h2>
+        Info module for the Attogram Framework.
+      </div>
+      <div class="col-sm-2">
+          <a href="https://github.com/attogram/attogram-info/blob/master/README.md">README</a>
+          <br /><a href="https://github.com/attogram/attogram-info/blob/master/CHANGELOG.md">CHANGELOG</a>
+          <br /><a href="https://github.com/attogram/attogram-info/blob/master/TODO.md">TODO</a>
+          <br /><a href="https://github.com/attogram/attogram-info/blob/master/LICENSE.md">LICENSE</a>
+      </div>
+      <div class="col-sm-2">
+          <a href="https://travis-ci.org/attogram/attogram-info"><img src="https://travis-ci.org/attogram/attogram-info.svg?branch=master" alt="Build" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-info"><img src="https://poser.pugx.org/attogram/attogram-info/v/stable" alt="Latest Stable Version" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-info"><img src="https://poser.pugx.org/attogram/attogram-info/downloads" alt="Total Downloads" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-info"><img src="https://poser.pugx.org/attogram/attogram-info/v/unstable" alt="Latest Unstable Version" /></a>
+          <br /><a href="https://github.com/attogram/attogram-info/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-info/license" alt="License" /></a>
+      </div>
+      <div class="col-sm-3">
+          <a href="https://www.codacy.com/app/attogram-project/attogram-info?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-info&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/e9cf59f181944cedb746349dbcffa8a0" alt="Badge" /></a>          <br /><a href="https://codeclimate.com/github/attogram/attogram-info"><img src="https://codeclimate.com/github/attogram/attogram-info/badges/gpa.svg" alt="Code Climate" /></a>
+          <br /><a href="https://codeclimate.com/github/attogram/attogram-info"><img src="https://codeclimate.com/github/attogram/attogram-info/badges/issue_count.svg" alt="Issue Count" /></a>
+          <br /><a href='https://www.versioneye.com/php/attogram:attogram-info/references'><img src='https://www.versioneye.com/php/attogram:attogram-info/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
+      </div>
   </div>
 
   <a name="attogram-contactform"></a>
