--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <br /> &nbsp; &nbsp; - <a href="#attogram-user" class="headb">User Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-info" class="headb">Info Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-contactform" class="headb">Contact Form Module</a>
+      <br /> &nbsp; &nbsp; - <a href="#attogram-modulemanager" class="headb">Module Manager</a>
       <br /><br /><a href="#ote" class="headb">Open Translation Engine</a>
       <br /><br /><a href="#8queens" class="headb">8 Queens puzzle</a>
     </div>
@@ -251,6 +252,32 @@
         <a href="https://www.codacy.com/app/attogram-project/attogram-contactform?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-contactform&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/ccc7d8a823254176bed3976cfa3bb2a6" alt="Badge" /></a>        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/issue_count.svg" alt="Issue Count" /></a>
         <br /><a href='https://www.versioneye.com/php/attogram:attogram-contactform/references'><img src='https://www.versioneye.com/php/attogram:attogram-contactform/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
+
+    </div>
+  </div>
+
+  <a name="attogram-modulemanager"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/attogram-modulemanager">Attogram Module Manager</a></h2>
+      Module Manager for the Attogram Framework.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/attogram-modulemanager/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/attogram-modulemanager/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/attogram-modulemanager/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/attogram-modulemanager/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://packagist.org/packages/attogram/attogram-modulemanager"><img src="https://poser.pugx.org/attogram/attogram-modulemanager/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-modulemanager"><img src="https://poser.pugx.org/attogram/attogram-modulemanager/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-modulemanager"><img src="https://poser.pugx.org/attogram/attogram-modulemanager/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/attogram-modulemanager/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-modulemanager/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/attogram-modulemanager?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-modulemanager&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/91c50120add44e26bd22e605849e673b" alt="Badge" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-modulemanager"><img src="https://codeclimate.com/github/attogram/attogram-modulemanager/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/php/attogram:attogram-modulemanager/references'><img src='https://www.versioneye.com/php/attogram:attogram-modulemanager/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
 
     </div>
   </div>
