--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       <br /> &nbsp; &nbsp; - <a href="#attogram-info" class="headb">Info Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-contactform" class="headb">Contact Form Module</a>
       <br /> &nbsp; &nbsp; - <a href="#attogram-modulemanager" class="headb">Module Manager</a>
-      <br /><br /><a href="#ote" class="headb">Open Translation Engine</a>
-      <br /><br /><a href="#8queens" class="headb">8 Queens puzzle</a>
+      <br /><br /><a href="#ote" class="headb">- Open Translation Engine module</a>
+      <br /><br /><a href="#games" class="headb">- Games Site module</a>
+      <br /><a href="#8queens" class="headb">- 8 Queens puzzle module</a>
     </div>
     <div class="col-sm-3 small">
       <a href="#dams" class="headb">Dictionary Additions Management System</a>
@@ -118,6 +119,29 @@
     </div>
     <div class="col-sm-3">
         <a href='https://www.versioneye.com/php/attogram:dams/references'><img src='https://www.versioneye.com/php/attogram:dams/reference_badge.svg?style=flat-square' alt="Reference Status" /></a>
+    </div>
+  </div>
+
+  <a name="games"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/games">Games Site</a></h2>
+      The Games Site is a collection of open source web-based games,
+      gathered together into an Attogram Framework module
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/games/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/games/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/games/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/games/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://packagist.org/packages/attogram/games"><img src="https://poser.pugx.org/attogram/games/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/games"><img src="https://poser.pugx.org/attogram/games/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/games"><img src="https://poser.pugx.org/attogram/games/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/games/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/games/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
     </div>
   </div>
 
