--- a/index.html
+++ b/index.html
@@ -13,29 +13,36 @@
 </head><body>
 <div class="container-fluid">
 
-  <div class="row rowh bg-primary">
+  <div class="row rowh text-muted bg-success">
     <div class="col-sm-6 text-center">
         <h1><a href="https://github.com/attogram/" class="headb">The Attogram Project</a></h1>
         <p><em>Open Source + Open Content</em></p>
         <p><a href="https://github.com/attogram/"><img src="https://avatars0.githubusercontent.com/u/8653063" alt="logo" width="100" height="100" /></a></p>
     </div>
     <div class="col-sm-3 small">
-      <a href="#attogram" class="headb">Attogram Framework</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-database" class="headb">Database Module</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-user" class="headb">User Module</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-info" class="headb">Info Module</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-contactform" class="headb">Contact Form Module</a>
-      <br /> &nbsp; &nbsp; - <a href="#attogram-modulemanager" class="headb">Module Manager</a>
-      <br /><br /><a href="#ote" class="headb">- Open Translation Engine module</a>
-      <br /><br /><a href="#games" class="headb">- Games Site module</a>
-      <br /><a href="#8queens" class="headb">- 8 Queens puzzle module</a>
+      <a href="#attogram" class="headb" style="font-size:120%;"><strong>Attogram Framework</strong></a>
+      <br />
+      <br /><em>Attogram Core Modules:</em>
+      <br />&nbsp; - <a href="#attogram-database" class="headb">Database</a>
+      <br />&nbsp; - <a href="#attogram-user" class="headb">User</a>
+      <br />&nbsp; - <a href="#attogram-info" class="headb">Info</a>
+      <br />&nbsp; - <a href="#attogram-contactform" class="headb">Contact Form</a>
+      <br />&nbsp; - <a href="#attogram-modulemanager" class="headb">Module Manager</a>
+      <br />
+      <br /><em>Open Content:</em>
+      <br /><a href="#dams" class="headb">&nbsp; - Dictionary Additions</a>
     </div>
     <div class="col-sm-3 small">
-      <a href="#dams" class="headb">Dictionary Additions Management System</a>
-      <br /><br /><a href="#wiib" class="headb">Which image is better?</a>
-      <br /><br /><a href="#yamwat" class="headb">Yamwat</a>
-      <br /><br /><a href="#domdoodler" class="headb">domdoodler</a>
-      <br /><br /><a href="#attogram.github.io" class="headb">attogram.github.io</a>
+      <em>Attogram Site Modules:</em>
+      <br /><a href="#ote" class="headb">&nbsp; - Open Translation Engine</a>
+      <br /><a href="#games" class="headb">&nbsp; - Games Site</a>
+      <br /><a href="#8queens" class="headb">&nbsp; - 8 Queens puzzle</a>
+      <br />
+      <br /><em>Other sites:</em>
+      <br /><a href="#wiib" class="headb">&nbsp; - Which image is better?</a>
+      <br /><a href="#yamwat" class="headb">&nbsp; - Yamwat</a>
+      <br /><a href="#domdoodler" class="headb">&nbsp; - domdoodler</a>
+      <br /><a href="#attogram.github.io" class="headb">&nbsp; - attogram.github.io</a>
     </div>
   </div>
 
