--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head><body>
 <div class="container-fluid">
-
   <div class="row rowh text-muted bg-success">
     <div class="col-sm-6 text-center">
-        <h1><a href="https://github.com/attogram/" class="headb">The Attogram Project</a></h1>
-        <p><em>Open Source + Open Content</em></p>
-        <p><a href="https://github.com/attogram/"><img src="https://avatars0.githubusercontent.com/u/8653063" alt="logo" width="100" height="100" /></a></p>
+      <h1><a href="https://github.com/attogram/" class="headb">Attogram<br />Project</a></h1>
     </div>
     <div class="col-sm-3 small">
       <a href="#attogram" class="headb" style="font-size:120%;"><strong>Attogram Framework</strong></a>
@@ -29,20 +26,19 @@
       <br />&nbsp; - <a href="#attogram-contactform" class="headb">Contact Form</a>
       <br />&nbsp; - <a href="#attogram-modulemanager" class="headb">Module Manager</a>
       <br />
-      <br /><em>Open Content:</em>
-      <br /><a href="#dams" class="headb">&nbsp; - Dictionary Additions</a>
-    </div>
-    <div class="col-sm-3 small">
-      <em>Attogram Site Modules:</em>
+      <br /><em>Attogram Site Modules:</em>
       <br /><a href="#ote" class="headb">&nbsp; - Open Translation Engine</a>
       <br /><a href="#games" class="headb">&nbsp; - Games Site</a>
       <br /><a href="#8queens" class="headb">&nbsp; - 8 Queens puzzle</a>
-      <br />
-      <br /><em>Other sites:</em>
-      <br /><a href="#wiib" class="headb">&nbsp; - Which image is better?</a>
-      <br /><a href="#yamwat" class="headb">&nbsp; - Yamwat</a>
-      <br /><a href="#domdoodler" class="headb">&nbsp; - domdoodler</a>
-      <br /><a href="#attogram.github.io" class="headb">&nbsp; - attogram.github.io</a>
+    </div>
+    <div class="col-sm-3 small">
+      <a href="#dams" class="headb"> - Dictionary Additions
+      <br /> &nbsp; Management System</a>
+      <br /><br /><a href="#wiib" class="headb"> - Which image is better?</a>
+      <br /><br /><a href="#yamwat" class="headb"> - Yamwat</a>
+      <br /><br /><a href="#domdoodler" class="headb"> - domdoodler</a>
+      <br /><br /><a href="#htfaker" class="headb"> - htfaker</a>
+      <br /><br /><a href="#attogram.github.io" class="headb"> - attogram.github.io</a>
     </div>
   </div>
 
@@ -352,6 +348,23 @@
         <a href="https://www.codacy.com/app/attogram-project/yamwat?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/yamwat&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/46ecaa5d7a374a48b781d9774c7241cc" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
+  <a name="htfaker"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/htfaker">htfaker</a></h2>
+      htfaker emulates Apache .htaccess functionality for the PHP built-in web server.
+    </div>
+    <div class="col-sm-2">
+      <a href="https://github.com/attogram/htfaker/blob/master/README.md">README</a>
+      <br /><a href="https://github.com/attogram/htfaker/blob/master/CHANGELOG.md">CHANGELOG</a>
+      <br /><a href="https://github.com/attogram/htfaker/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-3">
     </div>
   </div>
 
