currency-exchange-rates, 'body-mass-info-tabl

--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@ h1 {
     padding: 0;
     width: 320px;
 }
+.project .name, .about, .home, .demo, .tech {
+    margin: 10px 10px 10px 10px;
+}
 .project .name {
     font-size: 135%;
     font-weight: bold;
-    margin-top: 10px;
 }
 .project .about {
-    padding: 10px;
+    font-size: 95%;
+}
+.project .home, .demo, .tech {
+    font-size: 85%;
 }
 .project .tech {
     font-style: italic;
-    padding: 10px;
 }
 </style>
 </head>
@@ -67,5 +71,5 @@ h1 {
 
 
 
-<div class="list"><div class="project"><a href="https://github.com/attogram/EightQueens"><img src="logos/EightQueens.png" width="320" height="160" alt="Eight Queens"></a><div class="name"> &nbsp; <a href="https://github.com/attogram/EightQueens">Eight Queens</a></div><div class="about">Eight Queens chess game. Can you place 8 queens on the board with none under attack? A web game inspired by the dreaded programmers interview question.</div><div class="tech">React with Chessboard.jsx</div><p> &nbsp; <a href="https://github.com/attogram/EightQueens">Eight Queens <b>Project Info</b></a></p><p> &nbsp; <a href="https://attogram.github.io/EightQueens/">Eight Queens <b>Live Demo</b></a></p></div><div class="project"><a href="https://github.com/attogram/ote"><img src="logos/ote.png" width="320" height="160" alt="Open Translation Engine"></a><div class="name"> &nbsp; <a href="https://github.com/attogram/ote">Open Translation Engine</a></div><div class="about">A collaborative translation dictionary manager for the open content web.</div><div class="tech">PHP, SQLite</div><p> &nbsp; <a href="https://github.com/attogram/ote">Open Translation Engine <b>Project Info</b></a></p><p> &nbsp; <a href="https://ote.2meta.com/">Open Translation Engine <b>Live Demo</b></a></p></div><div class="project"><a href="https://github.com/attogram"><img src="logos/github.png" width="320" height="160" alt="Attogram on Github"></a><div class="name"> &nbsp; <a href="https://github.com/attogram">Attogram on Github</a></div><div class="about">Our main repository service provider.</div><p> &nbsp; <a href="https://github.com/attogram">Attogram on Github <b>Project Info</b></a></p></div><div class="project"><a href="https://www.patreon.com/attogram"><img src="logos/patreon.png" width="320" height="160" alt="Attogram on Patreon"></a><div class="name"> &nbsp; <a href="https://www.patreon.com/attogram">Attogram on Patreon</a></div><div class="about">Support future developments!</div><p> &nbsp; <a href="https://www.patreon.com/attogram">Attogram on Patreon <b>Project Info</b></a></p></div></div></body>
+<div class="list"><div class="project"><a href="https://github.com/attogram/EightQueens"><img src="logos/EightQueens.png" width="320" height="160" alt="Eight Queens"></a><div class="name"><a href="https://github.com/attogram/EightQueens">Eight Queens</a></div><div class="about">Eight Queens chess game. Can you place 8 queens on the board with none under attack? A web game inspired by the dreaded programmers interview question.</div><div class="tech">Tech: React with Chessboard.jsx</div><div class="home"><a href="https://github.com/attogram/EightQueens">Eight Queens <b>Project</b></a></div><div class="demo"><a href="https://attogram.github.io/EightQueens/">Eight Queens <b>Demo</b></a></div></div><div class="project"><a href="https://github.com/attogram/currency-exchange-rates"><img src="logos/currency-exchange-rates.png" width="320" height="160" alt="Currency Exchange Rates"></a><div class="name"><a href="https://github.com/attogram/currency-exchange-rates">Currency Exchange Rates</a></div><div class="about">Currency Exchange Rates Website with data from: The European Central Bank, The Swiss National Bank, The Bank of Israel, The Central Bank of the Russian Federation, and The Reserve Bank of Australia.</div><div class="tech">Tech: PHP 7, SQLite</div><div class="home"><a href="https://github.com/attogram/currency-exchange-rates">Currency Exchange Rates <b>Project</b></a></div><div class="demo"><a href="https://getitdaily.com/rates/">Currency Exchange Rates <b>Demo</b></a></div></div><div class="project"><a href="https://github.com/attogram/body-mass-info-table"><img src="logos/body-mass-info-table.png" width="320" height="160" alt="Body Mass Info Table"></a><div class="name"><a href="https://github.com/attogram/body-mass-info-table">Body Mass Info Table</a></div><div class="about">Multi-weight Body Mass Index (BMI) table based on your height, age and sex, with calculated Body Fat/Lean Percentage, Base Metabolic Rate (BMR) and Total Daily Energy Expenditure (TDEE) for various activity levels.</div><div class="tech">Tech: PHP 7</div><div class="home"><a href="https://github.com/attogram/body-mass-info-table">Body Mass Info Table <b>Project</b></a></div><div class="demo"><a href="https://getitdaily.com/body-mass-info-table/">Body Mass Info Table <b>Demo</b></a></div></div><div class="project"><a href="https://github.com/attogram/ote"><img src="logos/ote.png" width="320" height="160" alt="Open Translation Engine"></a><div class="name"><a href="https://github.com/attogram/ote">Open Translation Engine</a></div><div class="about">A collaborative translation dictionary manager for the open content web.</div><div class="tech">Tech: PHP, SQLite</div><div class="home"><a href="https://github.com/attogram/ote">Open Translation Engine <b>Project</b></a></div><div class="demo"><a href="https://ote.2meta.com/">Open Translation Engine <b>Demo</b></a></div></div><div class="project"><a href="https://github.com/attogram"><img src="logos/github.png" width="320" height="160" alt="Attogram on Github"></a><div class="name"><a href="https://github.com/attogram">Attogram on Github</a></div><div class="about">Our Git repository service provider. Starting in 2014 with the migration of the Open Translation Engine from sourceforge.</div><div class="home"><a href="https://github.com/attogram">Attogram on Github <b>Project</b></a></div></div><div class="project"><a href="https://www.patreon.com/attogram"><img src="logos/patreon.png" width="320" height="160" alt="Attogram on Patreon"></a><div class="name"><a href="https://www.patreon.com/attogram">Attogram on Patreon</a></div><div class="about">Support future developments!</div><div class="home"><a href="https://www.patreon.com/attogram">Attogram on Patreon <b>Project</b></a></div></div></div></body>
 </html>
